--- a/Labo 10/Subpaginas/Oefeningen Bootstrap/Personal Homepage.html
+++ b/Labo 10/Subpaginas/Oefeningen Bootstrap/Personal Homepage.html
@@ -10,100 +10,112 @@
 <body>
     <h1>Tim</h1>
     <section>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-6">
+                    <header>
+                        <h1>Personal information</h1>
+                    </header>
+                        <aside>
+                            <ul class="lijst">
+                                <li>Fullname: Tim Geuens</li>
+                                <li>Adress: Doorniksesteenweg 145, Kortrijk</li>
+                                <li>Phone number: 0499 876 543</li>
+                                <li>Email adress: <a href="mailto:Tim.geuens@student.vives.be">Tim.geuens@student.vives.be</a></li>
+                            </ul>
+                            <img src="../../Images/Portret%20klein.jpg" alt="potret" width="200">
+                        </aside>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-6">
+                    <section>
+                        <header>
+                            <h1>Hobbies</h1>
+                        </header>
+                        <article>
+                            <header>
+                                <h2>Formule 1</h2>
+                            </header>
+                            <p>
+                                Formule 1 is de hoogste klasse in de autosport, gereguleerd door de Fédération Internationale de l’Automobile (FIA).<br>
+                                Het seizoen bestaat uit een reeks races, bekend als Grands Prix, die wereldwijd op speciaal aangelegde circuits en openbare wegen worden gehouden. <br>
+                                F1-auto’s zijn de snelste raceauto’s ter wereld, met geavanceerde technologie en aerodynamica. Teams zoals Mclaren, Ferrari en Red Bull strijden om de kampioenschappen voor coureurs en constructeurs.<br>
+                                Bekende coureurs zijn onder andere Lewis Hamilton, Max Verstappen en Charles Leclerc. <br>
+                                De sport combineert snelheid, strategie en technische innovatie, wat het tot een van de meest opwindende en populaire motorsporten ter wereld maakt.
+                            </p>
+                        </article>
+                        <article>
+                            <header>
+                                <h2>Gamen</h2>
+                            </header>
+                            <p>
+                                Gamen is een populaire hobby waarbij je videogames speelt op verschillende platforms zoals pc, consoles (zoals PlayStation en Xbox), en mobiele apparaten. <br>
+                                Het biedt een breed scala aan genres, van actie en avontuur tot strategie en simulatie. <br>
+                                Gamen kan zowel solo als met anderen worden gedaan, waarbij online multiplayer-games je in staat stellen om met vrienden of mensen van over de hele wereld te spelen. <br>
+                                Het is een geweldige manier om te ontspannen, je vaardigheden te verbeteren en deel uit te maken van een community. <br>
+                                Games die ik vaak speel zijn Formule 1, Fortnite en GTA 5 Online. Dit doe ik voornamelijk op de ps5.
+                            </p>
+                        </article>
+                        <article>
+                            <header>
+                                <h2>Lego</h2>
+                            </header>
+                            <p>
+                                LEGO Technic is een speciale lijn van LEGO die zich richt op het bouwen van complexe en realistische modellen met geavanceerde functies. <br>
+                                Deze sets bevatten onderdelen zoals tandwielen, assen, motoren en pneumatische systemen, waardoor je voertuigen en machines kunt bouwen die echt kunnen bewegen en functioneren. <br>
+                                Het is een geweldige hobby voor mensen die van techniek en bouwen houden, omdat het niet alleen leuk is, maar ook educatief. <br>
+                                Je kunt alles maken, van auto’s en vrachtwagens tot kranen en vliegtuigen. <br>
+                                zelf heb ik al een heel aantal sets gemaakt, de laatste set die ik gemaakt heb is de Mclaren P1. <br> <br>
+                                <img src="../../Images/Lego_mclaren.png" alt="Lego Mclaren" width="600">
+                            </p>
+                        </article>
+                    </section>
+                </div>
+                <div class="col-6">
+                    <section>
+                        <header>
+                            <h1>Likes</h1>
+                        </header>
+                        <article>
+                            <header>
+                                <h2>Marvel Films</h2>
+                            </header>
+                            <p>
+                                Ik ben fan van de Marvel films die allemaal te vinden zijn op Disney+. <br> <br>
+                                <img src="../../Images/Marvel.jpeg" alt="Marvel" width="600">
+                            </p>
+                        </article>
+                        <article>
+                            <header>
+                                <h2>Coldplay</h2>
+                            </header>
+                            <p>
+                                Ik heb de muziek van Coldplay altijd mooi gevonden. <br> <br>
+                                <a href="https://www.coldplay.com/" target="_blank">
+                                    <img src="../../Images/Coldplay.jpg" alt="Coldplay" width="600">
+                                </a>
+                            </p>
+                        </article>
+                    </section>
+                </div>
+            </div>
+        </div>
+    </section>
+    <article>
         <header>
-            <h1>Personal information</h1>
+            <h2>Hieronder een aantal linken.</h2>
         </header>
         <aside>
-            <ul class="lijst">
-                <li>Fullname: Tim Geuens</li>
-                <li>Adress: Doorniksesteenweg 145, Kortrijk</li>
-                <li>Phone number: 0499 876 543</li>
-                <li>Email adress: <a href="mailto:Tim.geuens@student.vives.be">Tim.geuens@student.vives.be</a></li>
+            <ul>
+                <li> <a href="https://www.formula1.com/" target="_blank">Formule 1</a></li>
+                <li> <a href="https://www.mclaren.com/racing/" target="_blank">Mclaren F1</a></li>
+                <li> <a href="https://www.lego.com/nl-be/themes/technic" target="_blank">Lego Technic</a></li>
+                <li> <a href="https://www.fortnite.com/?lang=en-US" target="_blank">Fortnite</a></li>
+                <li> <a href="https://www.rockstargames.com/gta-v" target="_blank">GTA 5</a></li>
             </ul>
-            <img src="../../Images/Portret%20klein.jpg" alt="potret" width="200">
         </aside>
-    </section>
-    <section>
-        <header>
-            <h1>Hobbies</h1>
-        </header>
-            <article>
-                <header>
-                    <h2>Formule 1</h2>
-                </header>
-                <p>
-                    Formule 1 is de hoogste klasse in de autosport, gereguleerd door de Fédération Internationale de l’Automobile (FIA).<br>
-                    Het seizoen bestaat uit een reeks races, bekend als Grands Prix, die wereldwijd op speciaal aangelegde circuits en openbare wegen worden gehouden. <br>
-                    F1-auto’s zijn de snelste raceauto’s ter wereld, met geavanceerde technologie en aerodynamica. Teams zoals Mclaren, Ferrari en Red Bull strijden om de kampioenschappen voor coureurs en constructeurs.<br>
-                    Bekende coureurs zijn onder andere Lewis Hamilton, Max Verstappen en Charles Leclerc. <br>
-                    De sport combineert snelheid, strategie en technische innovatie, wat het tot een van de meest opwindende en populaire motorsporten ter wereld maakt.
-                </p>
-            </article>
-            <article>
-                <header>
-                    <h2>Gamen</h2>
-                </header>
-                <p>
-                    Gamen is een populaire hobby waarbij je videogames speelt op verschillende platforms zoals pc, consoles (zoals PlayStation en Xbox), en mobiele apparaten. <br>
-                    Het biedt een breed scala aan genres, van actie en avontuur tot strategie en simulatie. <br>
-                    Gamen kan zowel solo als met anderen worden gedaan, waarbij online multiplayer-games je in staat stellen om met vrienden of mensen van over de hele wereld te spelen. <br>
-                    Het is een geweldige manier om te ontspannen, je vaardigheden te verbeteren en deel uit te maken van een community. <br>
-                    Games die ik vaak speel zijn Formule 1, Fortnite en GTA 5 Online. Dit doe ik voornamelijk op de ps5.
-                </p>
-            </article>
-        <article>
-            <header>
-                <h2>Lego</h2>
-            </header>
-            <p>
-                LEGO Technic is een speciale lijn van LEGO die zich richt op het bouwen van complexe en realistische modellen met geavanceerde functies. <br>
-                Deze sets bevatten onderdelen zoals tandwielen, assen, motoren en pneumatische systemen, waardoor je voertuigen en machines kunt bouwen die echt kunnen bewegen en functioneren. <br>
-                Het is een geweldige hobby voor mensen die van techniek en bouwen houden, omdat het niet alleen leuk is, maar ook educatief. <br>
-                Je kunt alles maken, van auto’s en vrachtwagens tot kranen en vliegtuigen. <br>
-                zelf heb ik al een heel aantal sets gemaakt, de laatste set die ik gemaakt heb is de Mclaren P1. <br> <br>
-                <img src="../../Images/Lego_mclaren.png" alt="Lego Mclaren" width="600">
-            </p>
-        </article>
-        <article>
-            <header>
-                <h2>Hieronder een aantal linken.</h2>
-            </header>
-            <aside>
-                <ul>
-                    <li> <a href="https://www.formula1.com/" target="_blank">Formule 1</a></li>
-                    <li> <a href="https://www.mclaren.com/racing/" target="_blank">Mclaren F1</a></li>
-                    <li> <a href="https://www.lego.com/nl-be/themes/technic" target="_blank">Lego Technic</a></li>
-                    <li> <a href="https://www.fortnite.com/?lang=en-US" target="_blank">Fortnite</a></li>
-                    <li> <a href="https://www.rockstargames.com/gta-v" target="_blank">GTA 5</a></li>
-                </ul>
-            </aside>
-        </article>
-    </section>
-    <section>
-        <header>
-            <h1>Likes</h1>
-        </header>
-        <article>
-            <header>
-                <h2>Marvel Films</h2>
-            </header>
-            <p>
-                Ik ben fan van de Marvel films die allemaal te vinden zijn op Disney+. <br> <br>
-                <img src="../../Images/Marvel.jpeg" alt="Marvel" width="600">
-            </p>
-        </article>
-        <article>
-            <header>
-                <h2>Coldplay</h2>
-            </header>
-            <p>
-                Ik heb de muziek van Coldplay altijd mooi gevonden. <br> <br>
-                <a href="https://www.coldplay.com/" target="_blank">
-                    <img src="../../Images/Coldplay.jpg" alt="Coldplay" width="600">
-                </a>
-            </p>
-        </article>
-    </section>
+    </article>
     <h2>Prognose</h2>
     <table border="1" width="30%">
         <thead>
