--- a/Labo 10/Subpaginas/Oefeningen Bootstrap/Personal Homepage.html
+++ b/Labo 10/Subpaginas/Oefeningen Bootstrap/Personal Homepage.html
@@ -23,7 +23,7 @@
                                 <li>Phone number: 0499 876 543</li>
                                 <li>Email adress: <a href="mailto:Tim.geuens@student.vives.be">Tim.geuens@student.vives.be</a></li>
                             </ul>
-                            <img src="../../Images/Portret%20klein.jpg" alt="potret" width="200">
+                            <img src="../../Images/Portret%20klein.jpg" alt="potret">
                         </aside>
                 </div>
             </div>
@@ -67,7 +67,7 @@
                                 Het is een geweldige hobby voor mensen die van techniek en bouwen houden, omdat het niet alleen leuk is, maar ook educatief. <br>
                                 Je kunt alles maken, van auto’s en vrachtwagens tot kranen en vliegtuigen. <br>
                                 zelf heb ik al een heel aantal sets gemaakt, de laatste set die ik gemaakt heb is de Mclaren P1. <br> <br>
-                                <img src="../../Images/Lego_mclaren.png" alt="Lego Mclaren" width="600">
+                                <img src="../../Images/Lego_mclaren.png" alt="Lego Mclaren">
                             </p>
                         </article>
                     </section>
@@ -83,7 +83,7 @@
                             </header>
                             <p>
                                 Ik ben fan van de Marvel films die allemaal te vinden zijn op Disney+. <br> <br>
-                                <img src="../../Images/Marvel.jpeg" alt="Marvel" width="600">
+                                <img src="../../Images/Marvel.jpeg" alt="Marvel">
                             </p>
                         </article>
                         <article>
@@ -93,7 +93,7 @@
                             <p>
                                 Ik heb de muziek van Coldplay altijd mooi gevonden. <br> <br>
                                 <a href="https://www.coldplay.com/" target="_blank">
-                                    <img src="../../Images/Coldplay.jpg" alt="Coldplay" width="600">
+                                    <img src="../../Images/Coldplay.jpg" alt="Coldplay">
                                 </a>
                             </p>
                         </article>
