--- a/Labo 11/Subpaginas/exercise6.html
+++ b/Labo 11/Subpaginas/exercise6.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <title>Grid Opdracht 6</title>
     <meta charset="UTF-8">
@@ -9,10 +9,16 @@
 </head>
 <body>
 <main>
-    <div class="block block1">1</div>
-    <div class="block block2">2</div>
-    <div class="block block3">3</div>
-    <div class="block block4">4</div>
+    <header>Grid Opdracht 6</header>
+    <nav>
+        <div><a href="index.html">&lt; Terug</a></div>
+    </nav>
+    <div class="container">
+        <div class="block block1">1</div>
+        <div class="block block2">2</div>
+        <div class="block block3">3</div>
+        <div class="block block4">4</div>
+    </div>
 </main>
 </body>
 </html>
