--- a/Labo 11/Subpaginas/index.html
+++ b/Labo 11/Subpaginas/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
-    <title>Grid oefeningen</title>
     <meta charset="UTF-8">
+    <title>Demo Grid</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/default.css">
+    <link rel="stylesheet" href="../Styles/style.css">
 </head>
 <body>
-<main>
-    <header>Grid oefeningen</header>
-    <nav>
-        <div><a href="exercise1.html">Opdracht 1</a></div>
-        <div><a href="exercise2.html">Opdracht 2</a></div>
-        <div><a href="exercise3.html">Opdracht 3</a></div>
-        <div><a href="exercise4.html">Opdracht 4</a></div>
-        <div><a href="exercise5.html">Opdracht 5</a></div>
-        <div><a href="exercise6.html">Opdracht 6</a></div>
-    </nav>
-</main>
+<section class="container">
+    <div class="item-1">1</div>
+    <div class="item-2">2</div>
+    <div class="item-3">3</div>
+    <div class="item-4">4</div>
+    <div class="item-5">5</div>
+    <div class="item-6">6</div>
+    <div class="item-7">7</div>
+    <div class="item-8">8</div>
+    <div class="item-9">9</div>
+</section>
 </body>
 </html>
