Labo 11 index pagina

--- a/index.html
+++ b/index.html
@@ -185,6 +185,17 @@
              </li>
          </ol>
      </li>
+     <li>
+         <h2>Labo 11</h2>
+         <ol>
+             <li>
+                 <a href="Labo%2011/Subpaginas/index%20oefeningen%201-6.html">Opdrachten 1-6</a>
+             </li>
+             <li>
+                 <a href="Labo%2011/Subpaginas/index.html">Extra opdracht</a>
+             </li>
+         </ol>
+     </li>
  </ul>
 </body>
 </html>
