--- a/Labo 11/Subpaginas/index oefeningen 1-6.html
+++ b/Labo 11/Subpaginas/index oefeningen 1-6.html
@@ -17,6 +17,8 @@
         <div><a href="exercise5.html">Opdracht 5</a></div>
         <div><a href="exercise6.html">Opdracht 6</a></div>
     </nav>
+
+    <a href="../../index.html">Terug naar hoofdpagina</a>
 </main>
 </body>
 </html>
