--- a/Labo 12/Subpaginas/Opdracht 3.html
+++ b/Labo 12/Subpaginas/Opdracht 3.html
@@ -5,41 +5,41 @@
 
 
     <title>Oef1 FlexBox</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../Styles/style.css">
 </head>
 <body>
-
-<header>
+<div class="container">
+    <header>
     <h1>Document Heading</h1>
-</header>
-<nav class="container">
-    <a href="/">Home</a>
-    <a href="/about">About</a>
-    <a href="/blog">Blog</a>
-    <a href="/jobs">Careers</a>
-    <a href="/contact">Contact Us</a>
-</nav>
-<main class="container">
-    <section>
-        <img alt="" src="../Images/cat.jpg">
-        <p>Shortest content</p>
-        <a href="somewhere">Go Somewhere</a>
-    </section>
-    <section>
-        <img alt="" src="../Images/cat1.jpg">
-        <p>Medium content.</p>
-        <a href="somewhere">Click Me</a>
-    </section>
-    <section>
-        <img alt="" src="../Images/cat2.jpg">
-        <p>Longest content</p>
-        <a href="somewhere">Do Something</a>
-    </section>
-</main>
-
-<footer>
-    <p>Copyright &copy; 2023 <a href="#">My Site</a></p>
-</footer>
-
+    </header>
+        <nav class="nav">
+            <a href="/">Home</a>
+            <a href="/about">About</a>
+            <a href="/blog">Blog</a>
+            <a href="/jobs">Careers</a>
+            <a href="/contact">Contact Us</a>
+        </nav>
+        <main class="main">
+            <section>
+                <img alt="" src="../Images/cat.jpg">
+                <p>Shortest content</p>
+                <a href="somewhere">Go Somewhere</a>
+            </section>
+            <section>
+                <img alt="" src="../Images/cat1.jpg">
+                <p>Medium content.</p>
+                <a href="somewhere">Click Me</a>
+            </section>
+            <section>
+                <img alt="" src="../Images/cat2.jpg">
+                <p>Longest content</p>
+                <a href="somewhere">Do Something</a>
+            </section>
+        </main>
+    <footer>
+        <p>Copyright &copy; 2023 <a href="#">My Site</a></p>
+    </footer>
+</div>
 </body>
 </html>
