--- a/Labo 12/Subpaginas/Opdracht 2.html
+++ b/Labo 12/Subpaginas/Opdracht 2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Flexbox cards</title>
-    <link rel="stylesheet" href="../Styles/flexbox-cards.css">
+    <link rel="stylesheet" href="../Styles/style%20opdracht%202.css">
 </head>
 <body>
 <div class="container">
