--- a/Labo 12/Subpaginas/Opdracht 3.html
+++ b/Labo 12/Subpaginas/Opdracht 3.html
@@ -6,7 +6,7 @@
 
     <title>Oef1 FlexBox</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="../Styles/style.css">
+    <link rel="stylesheet" href="../Styles/style%20opdracht%203.css">
 </head>
 <body>
 <div class="container">
