--- a/index.html
+++ b/index.html
@@ -196,6 +196,20 @@
              </li>
          </ol>
      </li>
+     <li>
+         <h2>Labo 12</h2>
+         <ol>
+             <li>
+                 <a href="Labo%2012/Subpaginas/Opdracht%202.html">opdracht 2</a>
+             </li>
+             <li>
+                 <a href="Labo%2012/Subpaginas/Opdracht%203.html">opdracht 3</a>
+             </li>
+             <li>
+                 <a href="Labo%2012/Subpaginas/frontendmentorprofilecard.html">frontend mentor profile card</a>
+             </li>
+         </ol>
+     </li>
  </ul>
 </body>
 </html>
