Labo 2 javascript commit 3

--- a/index.html
+++ b/index.html
@@ -229,6 +229,32 @@
                             </li>
                         </ol>
                     </li>
+                    <li>
+                        <h3>Labo 2 Javascript</h3>
+                        <ol>
+                            <li>
+                                <a href="Semester%202/Labo%202%20Javascript/Opdracht%20Arrays/index.html">Opdracht Arrays</a>
+                            </li>
+                            <li>
+                                <a href="Semester%202/Labo%202%20Javascript/Opdracht%2001/index.html">Opdracht 01</a>
+                            </li>
+                            <li>
+                                <a href="Semester%202/Labo%202%20Javascript/Opdracht%2003/index.html">Opdracht 03</a>
+                            </li>
+                            <li>
+                                <a href="Semester%202/Labo%202%20Javascript/Opdracht%2004/index.html">Opdracht 04</a>
+                            </li>
+                            <li>
+                                <a href="Semester%202/Labo%202%20Javascript/Opdracht%2005/index.html">Opdracht 05</a>
+                            </li>
+                            <li>
+                                <a href="Semester%202/Labo%202%20Javascript/Opdracht%2006/index.html">Opdracht 06</a>
+                            </li>
+                            <li>
+                                <a href="Semester%202/Labo%202%20Javascript/Opdracht%20Substring/index.html">Opdracht Substring</a>
+                            </li>
+                        </ol>
+                    </li>
                 </ul>
             </div>
         </div>
