--- a/Semester 2/Labo 2 Javascript/Opdracht Substring/index.html
+++ b/Semester 2/Labo 2 Javascript/Opdracht Substring/index.html
@@ -6,11 +6,14 @@
     <title>Title</title>
 </head>
 <body>
-<input type="text" id="txtInput" />
-<input id="btnSubString" type="button" value="SubString" />
-<input type="number" id="txtLinks" />
-<input type="number" id="txtRechts" />
-<span id="txtOutput">(geen output)</span>
+<p>
+    "<input type="text" id="txtInput" />".
+    <input id="btnSubString" type="button" value="Substring" />
+    (<input type="number" id="txtLinks" />,
+    <input type="number" id="txtRechts" />)
+    <span id="txtOutput">= (geen output)</span>
+</p>
+
 <script type="text/javascript" charset="utf-8" src="scripts/code.js"></script>
 </body>
 </html>
