--- a/index.html
+++ b/index.html
@@ -255,6 +255,26 @@
                             </li>
                         </ol>
                     </li>
+                    <li>
+                        <h3>Labo 3 Javascript</h3>
+                        <ol>
+                            <li>
+                                <a href="Semester%202/Labo%203%20Javascript/Opdracht%20Paragrafen/index.html">Opdracht Paragrafen</a>
+                            </li>
+                            <li>
+                                <a href="Semester%202/Labo%203%20Javascript/Opdracht%2002/index.html">Opdracht 02</a>
+                            </li>
+                            <li>
+                                <a href="Semester%202/Labo%203%20Javascript/Opdracht%20Colorpicker/index.html">Opdracht Colorpicker</a>
+                            </li>
+                            <li>
+                                <a href="Semester%202/Labo%203%20Javascript/Opdracht%20Kleurenwisselaar/index.html">Opdracht Kleurenwisselaar</a>
+                            </li>
+                            <li>
+                                <a href="Semester%202/Labo%203%20Javascript/Opdracht%20Producten/index.html">Opdracht Producten</a>
+                            </li>
+                        </ol>
+                    </li>
                 </ul>
             </div>
         </div>
