--- a/Semester 2/Labo 3 Javascript/Opdracht Kleurenwisselaar/index.html
+++ b/Semester 2/Labo 3 Javascript/Opdracht Kleurenwisselaar/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles/style.css">
-    <title>Title</title>
+    <title>Web Development I</title>
 </head>
 <body>
+
+<button id="button1" class="button">Knop 1</button>
+<button id="button2" class="button">Knop 2</button>
+<button id="button3" class="button">Knop 3</button>
 
 <script type="text/javascript" charset="utf-8" src="scripts/code.js"></script>
 </body>
