--- a/Semester 2/Labo 3 Javascript/Opdracht Producten/index.html
+++ b/Semester 2/Labo 3 Javascript/Opdracht Producten/index.html
@@ -3,10 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles/style.css">
-    <title>Title</title>
+    <title>Web Development I</title>
 </head>
 <body>
-
+<table>
+    <thead>
+    <tr>
+        <th>Producten</th>
+        <th>prijs</th>
+        <th>Aantal</th>
+        <th>btw</th>
+        <th>subtotaal</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <td>Product1</td>
+        <td class="prijs">10.00</td>
+        <td><input type="number" value="0" class="aantal"></td>
+        <td class="btw">6%</td>
+        <td><span id="subtotaal1" class="subtotaal">0.00 Eur</span></td>
+    </tr>
+    <tr>
+        <td>Product2</td>
+        <td class="prijs">15.00</td>
+        <td><input type="number" value="0" class="aantal"></td>
+        <td class="btw">21%</td>
+        <td><span id="subtotaal2" class="subtotaal">0.00 Eur</span></td>
+    </tr>
+    <tr>
+        <td>Product3</td>
+        <td class="prijs">12.20</td>
+        <td><input type="number" value="0" class="aantal"></td>
+        <td class="btw">21%</td>
+        <td><span id="subtotaal3" class="subtotaal">0.00 Eur</span></td>
+    </tr>
+    <tr>
+        <td colspan="4">Totaal</td>
+        <td><span id="totaal">0.00 Eur</span></td>
+    </tr>
+    </tbody>
+</table>
+<input id="btnHerbereken" type="button" value="Herbereken">
 <script type="text/javascript" charset="utf-8" src="scripts/code.js"></script>
 </body>
 </html>
