--- a/index.html
+++ b/index.html
@@ -275,6 +275,23 @@
                             </li>
                         </ol>
                     </li>
+                    <li>
+                        <h3>Labo 4 Javascript</h3>
+                        <ol>
+                            <li>
+                                <a href="Semester%202/Labo%204%20Javascript/Opdracht%20Invulformulier/index.html">Opdracht Paragrafen</a>
+                            </li>
+                            <li>
+                                <a href="Semester%202/Labo%204%20Javascript/Opdracht%20spaties%20op%20console/index.html">Opdracht 02</a>
+                            </li>
+                            <li>
+                                <a href="Semester%202/Labo%204%20Javascript/Opdracht%20spaties%20met%20functies/index.html">Opdracht Colorpicker</a>
+                            </li>
+                            <li>
+                                <a href="Semester%202/Labo%204%20Javascript/Opdracht%20Man%20van%20An/index.html">Opdracht Kleurenwisselaar</a>
+                            </li>
+                        </ol>
+                    </li>
                 </ul>
             </div>
         </div>
