--- a/Semester 2/Labo 4 Javascript/Opdracht spaties op console/index.html
+++ b/Semester 2/Labo 4 Javascript/Opdracht spaties op console/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
 
+<input type="text" id="inputVeld">
+<input type="button" id="btn" value="Toon tekst">
+
 <script type="text/javascript" charset="utf-8" src="scripts/code.js"></script>
 </body>
 </html>
