labo 4 index aanvulling

--- a/index.html
+++ b/index.html
@@ -279,16 +279,16 @@
                         <h3>Labo 4 Javascript</h3>
                         <ol>
                             <li>
-                                <a href="Semester%202/Labo%204%20Javascript/Opdracht%20Invulformulier/index.html">Opdracht Paragrafen</a>
+                                <a href="Semester%202/Labo%204%20Javascript/Opdracht%20Invulformulier/index.html">Opdracht InvulFormulier</a>
                             </li>
                             <li>
-                                <a href="Semester%202/Labo%204%20Javascript/Opdracht%20spaties%20op%20console/index.html">Opdracht 02</a>
+                                <a href="Semester%202/Labo%204%20Javascript/Opdracht%20spaties%20op%20console/index.html">Opdracht Spaties op Console</a>
                             </li>
                             <li>
-                                <a href="Semester%202/Labo%204%20Javascript/Opdracht%20spaties%20met%20functies/index.html">Opdracht Colorpicker</a>
+                                <a href="Semester%202/Labo%204%20Javascript/Opdracht%20spaties%20met%20functies/index.html">Opdracht Spaties met functies</a>
                             </li>
                             <li>
-                                <a href="Semester%202/Labo%204%20Javascript/Opdracht%20Man%20van%20An/index.html">Opdracht Kleurenwisselaar</a>
+                                <a href="Semester%202/Labo%204%20Javascript/Opdracht%20Man%20van%20An/index.html">Opdracht Man van An</a>
                             </li>
                         </ol>
                     </li>
