--- a/index.html
+++ b/index.html
@@ -292,6 +292,26 @@
                             </li>
                         </ol>
                     </li>
+                    <li>
+                        <h3>Labo 5 Javascript</h3>
+                        <ol>
+                            <li>
+                                <a href="Semester%202/Labo%205%20Javascript/Opdracht%20Trigrams/index.html">Opdracht Trigrams</a>
+                            </li>
+                            <li>
+                                <a href="Semester%202/Labo%205%20Javascript/Opdracht%20De%20en%20Het/index.html">Opdracht De en Het</a>
+                            </li>
+                            <li>
+                                <a href="Semester%202/Labo%205%20Javascript/Opdracht%20Gemeenten/index.html">Opdracht Gemeenten</a>
+                            </li>
+                            <li>
+                                <a href="Semester%202/Labo%205%20Javascript/Opdracht%20formwaarden/index.html">Opdracht Formwaarden</a>
+                            </li>
+                            <li>
+                                <a href="Semester%202/Labo%205%20Javascript/Opdracht%20Formvalidatie/index.html">Opdracht Formvalidatie</a>
+                            </li>
+                        </ol>
+                    </li>
                 </ul>
             </div>
         </div>
