vervollediging index pagina

--- a/index.html
+++ b/index.html
@@ -312,6 +312,23 @@
                             </li>
                         </ol>
                     </li>
+                    <li>
+                        <h3>Labo 6 Javascript</h3>
+                        <ol>
+                            <li>
+                                <a href="Semester%202/Labo%206%20Javascript/Opdracht%20extra%20oef%201/index.html">Opdracht extra oefeningen 1</a>
+                            </li>
+                            <li>
+                                <a href="Semester%202/Labo%206%20Javascript/Opdracht%20extra%20oef%202/index.html">Opdracht extra oefeningen 2</a>
+                            </li>
+                            <li>
+                                <a href="Semester%202/Labo%206%20Javascript/Opdracht%20extra%20oef%203/index.html">Opdracht extra oefeningen 3</a>
+                            </li>
+                            <li>
+                                <a href="Semester%202/Labo%206%20Javascript/Opdracht%20Colorpicker%20uitbreiding/index.html">Opdracht Colorpicker uitbreiding</a>
+                            </li>
+                        </ol>
+                    </li>
                 </ul>
             </div>
         </div>
