--- a/Semester 2/Labo 7 Javascript/Opdracht Hit An Object/index.html
+++ b/Semester 2/Labo 7 Javascript/Opdracht Hit An Object/index.html
@@ -10,10 +10,8 @@
 <body>
 <input id="btnStart" type="button" value="start game" >
 <div id="playField">
-    <img src="Images/0.png" alt="bom" id="target">
+    <img src="Images/0.png" alt="img" id="target">
 </div>
-
-
 
 </body>
 </html>
