Labo 7 Hit an Object

--- a/Semester 2/Labo 7 Javascript/Opdracht Hit An Object/index.html
+++ b/Semester 2/Labo 7 Javascript/Opdracht Hit An Object/index.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles/style.css">
-    <script type="text/javascript" charset="utf-8"
-            src="scripts/code.js"></script>
+
     <title>Title</title>
 </head>
 <body>
 <input id="btnStart" type="button" value="start game" >
 <div id="playField">
-    <img src="Images/0.png" alt="img" id="target">
+    <img src="Images/0.png" alt="img" id="targetImage">
 </div>
 
+
+<script type="text/javascript" charset="utf-8" src="scripts/code.js"></script>
 </body>
 </html>
