--- a/Semester 2/Labo 7 Javascript/Opdracht Matching Game/index.html
+++ b/Semester 2/Labo 7 Javascript/Opdracht Matching Game/index.html
@@ -6,7 +6,7 @@
     <title>Title</title>
 </head>
 <body>
-
+<div class="game-board" id="gameBoard"></div>
 <script type="text/javascript" charset="utf-8" src="scripts/code.js"></script>
 </body>
 </html>
