--- a/Semester 2/Labo 7 Javascript/Opdracht Hit An Object/index.html
+++ b/Semester 2/Labo 7 Javascript/Opdracht Hit An Object/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles/style.css">
 
-    <title>Title</title>
+    <title>Hit an Object</title>
 </head>
 <body>
 <input id="btnStart" type="button" value="start game" >
