--- a/index.html
+++ b/index.html
@@ -329,6 +329,17 @@
                             </li>
                         </ol>
                     </li>
+                    <li>
+                        <h3>Labo 7 Javascript</h3>
+                        <ol>
+                            <li>
+                                <a href="Semester%202/Labo%207%20Javascript/Opdracht%20Hit%20An%20Object/index.html">Opdracht extra oefeningen 1</a>
+                            </li>
+                            <li>
+                                <a href="Semester%202/Labo%207%20Javascript/Opdracht%20Matching%20Game/index.html">Opdracht extra oefeningen 2</a>
+                            </li>
+                        </ol>
+                    </li>
                 </ul>
             </div>
         </div>
