--- a/Semester 2/Labo 7 Javascript/Opdracht Matching Game/index.html
+++ b/Semester 2/Labo 7 Javascript/Opdracht Matching Game/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles/style.css">
-    <title>Title</title>
+    <title>Matching Game</title>
 </head>
 <body>
 <div class="game-board" id="gameBoard"></div>
