--- a/Semester 2/Labo 8 Javascript/Opdracht Contact Manager/index.html
+++ b/Semester 2/Labo 8 Javascript/Opdracht Contact Manager/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="nl">
 <head>
     <title>Contact manager</title>
-    <link rel="stylesheet" href="styles/styles.css">
-    <script type="text/javascript" charset="utf-8" src="scripts/validatie.js"></script>
-    <script type="text/javascript" charset="utf-8" src="scripts/code.js"></script>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
 <div>
-    <select id="lstPersonen" size="10">
+    <label for="lstPersonen"></label><select id="lstPersonen" size="10">
     </select>
     <input type="button" id="btnNieuw" value="Nieuw"/>
 </div>
@@ -41,6 +39,7 @@
     </div>
     <input type="button" id="btnBewaar" value="Bewaar"/>
 </form>
-
+<script type="text/javascript" charset="utf-8" src="scripts/validatie.js"></script>
+<script type="text/javascript" charset="utf-8" src="scripts/code.js"></script>
 </body>
 </html>
