--- a/index.html
+++ b/index.html
@@ -340,6 +340,20 @@
                             </li>
                         </ol>
                     </li>
+                    <li>
+                        <h3>Labo 8 Javascript</h3>
+                        <ol>
+                            <li>
+                                <a href="Semester%202/Labo%208%20Javascript/Opdracht%20Datum/index.html">Opdracht Datum</a>
+                            </li>
+                            <li>
+                                <a href="Semester%202/Labo%208%20Javascript/Opdracht%20JSON/index.html">Opdracht JSON</a>
+                            </li>
+                            <li>
+                                <a href="Semester%202/Labo%208%20Javascript/Opdracht%20Contact%20Manager/index.html">Opdracht Contact Manager</a>
+                            </li>
+                        </ol>
+                    </li>
                 </ul>
             </div>
         </div>
