--- a/index.html
+++ b/index.html
@@ -354,6 +354,17 @@
                             </li>
                         </ol>
                     </li>
+                    <li>
+                        <h3>Labo 9 Javascript</h3>
+                        <ol>
+                            <li>
+                                <a href="Semester%202/Labo%209%20Javascript/Antwoorden%20op%20opdrachten/index.html">Antwoorden op opdrachten</a>
+                            </li>
+                            <li>
+                                <a href="Semester%202/Labo%209%20Javascript/Start_Colorpicker/Start_Colorpicker/index.html">Opdracht Colorpicker Pro</a>
+                            </li>
+                        </ol>
+                    </li>
                 </ul>
             </div>
         </div>
