--- a/index.html
+++ b/index.html
@@ -364,6 +364,12 @@
                                 <a href="Semester%202/Labo%209%20Javascript/Start_Colorpicker/Start_Colorpicker/index.html">Opdracht Colorpicker Pro</a>
                             </li>
                         </ol>
+                        <h3>Labo 10 Javascript</h3>
+                        <ol>
+                            <li>
+                                <a href="Semester%202/Labo%2010%20Javascript/Opdracht%20MyInternetStartPage">My Internet Start Page</a>
+                            </li>
+                        </ol>
                     </li>
                 </ul>
             </div>
