--- a/Semester 2/Startproject Voorbeeldexamen/index.html
+++ b/Semester 2/Startproject Voorbeeldexamen/index.html
@@ -51,6 +51,7 @@
 			<h2>Highscores <button id="reset" class="badge text-bg-secondary">Reset</button></h2>
 		</footer>
 	</section>
+<script type="text/javascript" charset="utf-8" src="scripts/code.js"></script>
 </body>
 
 </html>
